# cursoROS2

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/ROS2_PX4_Offboard_cpp/lib/ROS2_PX4_Offboard_cpp/: trajetoria
install/ROS2_PX4_Offboard_cpp/share/ROS2_PX4_Offboard_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ROS2_PX4_Offboard_cpp/share/ROS2_PX4_Offboard_cpp/cmake/: ROS2_PX4_Offboard_cppConfig.cmake
install/px4_msgs/share/px4_msgs/: package.sh
install/px4_offboard/share/px4_offboard/: offboard_velocity_control.launch.py  package.sh
log/: latest_build
src/ROS2_PX4_Offboard_cpp/: CMakeLists.txt
src/ROS2_PX4_Offboard_cpp/src/Trajetoria_fixa/: Trajetoria_fixa.cpp  Trajetoria_fixa.h
src/px4_msgs/: README.md
src/ros_px4_cpp/: CMakeLists.txt  package.xml
src/ros_px4_cpp/src/Trajetoria_fixa/: Trajetoria_fixa.cpp  Trajetoria_fixa.h
